FinalProject/force-app/main/default/objects/ProjectLineItem__c/ProjectLineItem__c.object-meta.xml
<CustomObject>
    <label>ProjectLineItem</label>
    <nameField>
        <label>Project Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProjectLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>