FinalProject/force-app/main/default/objects/ProjectLineItem__c/fields/ActualTotalHours__c.field-meta.xml
<CustomField>
    <fullName>ActualTotalHours__c</fullName>
    <description>Horas totales a cubrir menos las horas asignadas hasta el momento</description>
    <formula>QuantityHours__c -  AssignedHours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ActualTotalHours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>