FinalProject/force-app/main/default/objects/ProjectLineItem__c/fields/AmountEstimated__c.field-meta.xml
<CustomField>
    <fullName>AmountEstimated__c</fullName>
    <label>AmountEstimated</label>
    <summarizedField>ProjectResource__c.AmountEstimated__c</summarizedField>
    <summaryForeignKey>ProjectResource__c.ProjectLineItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>