FinalProject/force-app/main/default/objects/ProjectLineItem__c/fields/AssignedHours__c.field-meta.xml
<CustomField>
    <fullName>AssignedHours__c</fullName>
    <label>AssignedHours</label>
    <summarizedField>ProjectResource__c.HoursAssigned__c</summarizedField>
    <summaryForeignKey>ProjectResource__c.ProjectLineItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>